Fix flash alert top spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,7 +117,7 @@ h1, h2 {
 
 /* flash message css overrides */
 .alert {
-    padding-top: 15px;
+    margin-top: 15px;
     > ul {
         list-style-type: none;
         margin-bottom: 0px;
